apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: nginx-apache-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:533267294726:certificate/3c556305-8831-48f9-84d0-d3bbc42958fe
    alb.ingress.kubernetes.io/ssl-redirect: '443' 
    alb.ingress.kubernetes.io/actions.fixed-response: >
      {"Type": "fixed-response", "FixedResponseConfig": { "ContentType": "text/plain", "StatusCode": "200", "MessageBody": "Hello from Rutvij"}}
    
spec:
  rules:  
    - host: kuber.kathabhawan.com
      http:
        paths:
          - path: /apache
            pathType: Prefix
            backend:
              service:
                name: apache-service
                port:
                  number: 80
          - path: /apache/
            pathType: ImplementationSpecific
            backend:
              service:
                name: apache-service
                port:
                  number: 80          
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: fixed-response
                port:
                  name: use-annotation
